# rag-chatbot

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  ingest.py  query.py
