[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "cmake>=4.3.2",
    "faster-whisper>=1.2.1",
    "huggingface-hub>=1.16.4",
    "imageio-ffmpeg>=0.6.0",
    "llama-cpp-python>=0.3.23",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.57.0",
    "torchvision>=0.27.0",
]

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["E402"]
